--- a/src/components/nav/profile/profile.module.css
+++ b/src/components/nav/profile/profile.module.css
@@ -6,7 +6,7 @@
         "b c"
         "b d";
 
-    grid-template-rows: 400px 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 3fr 9fr;
 
     grid-gap: 1em;
